--- a/src/app/zamow/zamow.css
+++ b/src/app/zamow/zamow.css
@@ -10,6 +10,10 @@
   border-radius: 30px;
   font-size: 24px;
   color: white;
-  box-shadow: 1px 6px rgba(152, 26, 5, 1);
-  border-bottom: none;
+  box-shadow: 0 0 0 0 #981a05, 0 4px 0 0 #981a05;
+  border: 2px solid #981a05;
+}
+
+.btt_btn:hover {
+  box-shadow: 0 2px 0 0 #981a05;
 }
