--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -32,9 +32,13 @@
   font-size: 22px;
 }
 
+.zemow-hero-input:focus {
+  outline: 2px solid #981a05;
+}
+
 .zamow-hero-btn {
   position: absolute;
-  padding: 12px 18px;
+  padding: 11px 18px;
   font-size: 22px;
   border-radius: 30px;
   right: 0;
@@ -44,7 +48,9 @@
   background: #d21e00;
   border: 2px solid #981a05;
   box-shadow: 0 0 0 0 #981a05, 0 4px 0 0 #981a05;
-  transform: translateY(calc(-1 * 3px));
+}
+.zamow-hero-btn:hover {
+  box-shadow: 0 2px 0 0 #981a05;
 }
 
 .line-container {
