--- a/src/app/zamow/zamow.css
+++ b/src/app/zamow/zamow.css
@@ -1,10 +1,16 @@
 .bg_sunset {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: radial-gradient(70vw 70vw at top center, #f8c459 0, #eae6e0 41%);
-  min-height: 100vh;
-  padding-top: 200px;
-  position: relative;
-  top: -168px;
   z-index: -1;
+}
+
+.zamow-container {
+  position: relative;
+  z-index: 1;
 }
 .btt_btn_container {
   margin: 100px auto;
