--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -66,3 +66,23 @@
   background-color: #000;
   margin-left: 10px;
 }
+
+/* progress bar */
+.progress-bar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 24px;
+  background: transparent;
+  z-index: 1000;
+}
+
+.progress-bar {
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgb(249, 146, 23) 0%,
+    rgb(249, 54, 0) 100%
+  );
+}
