--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -626,15 +626,17 @@
   font-weight: 700;
   line-height: 55.8px;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 120px;
+}
+.OurClients_Card_Container {
+  margin-top: -220px;
 }
 .OurClients_Card_One {
   background-color: #ffffff;
   border-radius: 25.6px;
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
-  padding-inline: 180px;
-  padding-block: 110px;
+  margin-bottom: -20px;
 }
 .OurClients_Card_One_Title {
   font-size: 38.4px;
@@ -707,10 +709,7 @@
   font-weight: 600;
   line-height: 20.736px;
 }
-.OurClients_Card_Container{
-  margin-top: -70px;
-}
-.OurClients_Marquee{
+.OurClients_Marquee {
   z-index: -10;
 }
 
@@ -1046,4 +1045,157 @@
   color: white;
   border: none;
   font-size: x-large;
+}
+/* *** */
+.OurClients_Slide {
+  display: flex;
+  flex-direction: column;
+  padding-inline: 50px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+}
+.OurClients_Slide_Container {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.OurClients_Slide_Media {
+  display: flex;
+}
+.OurClients_Slide_Button {
+  align-self: end;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+}
+.OurClients_Slide_Title {
+  font-size: 33.28px;
+  font-weight: 600;
+  line-height: 39.936px;
+  padding-block: 30px;
+}
+.OurClients_Slide_Media_Rating {
+  margin-left: -50px;
+  display: flex;
+  gap: 10px;
+}
+.OurClients_Slide_Star_Reviewer {
+  font-size: 10.624px;
+  font-weight: 600;
+  line-height: 10.624px;
+}
+.OurClients_Slide_Star_Company {
+  font-size: 10.624px;
+  font-weight: 300;
+  line-height: 10.624px;
+}
+.ArrowButton {
+  display: flex;
+  height: 2em;
+  width: 2em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.52em;
+  border-radius: 5.21em;
+  background-color: #ffc600;
+  padding: 0.52em;
+  font-weight: bold;
+  box-shadow: 0px 0.15em black;
+  transition: transform 0.05s cubic-bezier(0.5, 1, 0.7, 0.7),
+    box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7),
+    border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7);
+  border: 0.1em solid #000000;
+}
+.ArrowButton:hover {
+  transform: translateY(0.3em);
+  box-shadow: none;
+}
+.ArrowButton_Arrow {
+  font-size: 1em;
+  font-weight: bolder;
+}
+.OurClients_Slide_Button_Text {
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+}
+.OurClients_Slide_Last {
+  padding-inline: 180px;
+  padding-block: 110px;
+}
+.YellowMarkSlide {
+  background-image: linear-gradient(90deg, #ffd042, #ffdc74);
+  border-radius: 8.67942px;
+  display: inline-block;
+  font-size: 33.28px;
+  font-weight: 600;
+  line-height: 29.952px;
+}
+
+/* Carousel */
+.embla {
+  --slide-spacing: 1rem;
+  --slide-size: 100%;
+  --slide-height: 19rem;
+}
+.embla__viewport {
+  overflow: hidden;
+}
+.embla__container {
+  backface-visibility: hidden;
+  display: flex;
+  touch-action: pan-y;
+  margin-left: calc(var(--slide-spacing) * -1);
+}
+.embla__slide {
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+  position: relative;
+}
+.embla__slide__img {
+  display: block;
+  height: var(--slide-height);
+  width: 100%;
+  object-fit: cover;
+}
+.embla__slide__number {
+  width: 4.6rem;
+  height: 4.6rem;
+  z-index: 1;
+  position: absolute;
+  top: 0.6rem;
+  right: 0.6rem;
+  border-radius: 50%;
+  background-color: rgba(var(--background-site-rgb-value), 0.85);
+  line-height: 4.6rem;
+  font-weight: 900;
+  text-align: center;
+  pointer-events: none;
+}
+.embla__slide__number > span {
+  color: var(--brand-primary);
+  background-image: linear-gradient(
+    45deg,
+    var(--brand-primary),
+    var(--brand-secondary)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.6rem;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
