feat/ animations-home: main screen animation completed

--- a/src/components/organisms/main/rating-captions/rating.module.css
+++ b/src/components/organisms/main/rating-captions/rating.module.css
@@ -21,6 +21,8 @@ width: 300px;
 }
 .ratingMainImg{
     width: 100%;
+    position: relative;
+    z-index: 1;
 }
 .ratingMainImg img{
     width: 85%;
