--- a/src/app/strategia-marketingowa/strategiamarketingowa.css
+++ b/src/app/strategia-marketingowa/strategiamarketingowa.css
@@ -534,20 +534,20 @@
   align-self: flex-start;
   flex-shrink: 0;
 }
-.Analysis4_PanelTextTitle{
-	color: #333333;
-	font-size: 32px;
-	font-weight: 700;
-	line-height: 60.8px;
-	max-width: 1088px;
+.Analysis4_PanelTextTitle {
+  color: #333333;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 60.8px;
+  max-width: 1088px;
   margin-bottom: 30px;
 }
-.Analysis4_PanelTextContent{
-	color: #333333;
-	font-size: 18px;
-	font-weight: 300;
-	line-height: 27px;
-	max-width: 1088px;
+.Analysis4_PanelTextContent {
+  color: #333333;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 27px;
+  max-width: 1088px;
 }
 
 /* 10. WhatRecieve */
@@ -1283,6 +1283,10 @@
   padding-top: 70px;
   padding-bottom: 50px;
 }
+.OurClients_Slide_Last {
+  padding-inline: 180px;
+  padding-block: 110px;
+}
 .OurClients_Slide_Container {
   display: flex;
   gap: 40px;
@@ -1290,17 +1294,6 @@
 }
 .OurClients_Slide_Media {
   display: flex;
-}
-.OurClients_Slide_Button {
-  align-self: end;
-  display: flex;
-  align-items: center;
-  gap: 30px;
-  cursor: pointer;
-  font-size: 25.6px;
-  font-weight: 600;
-  line-height: 34.432px;
-  text-align: center;
 }
 .OurClients_Slide_Title {
   font-size: 33.28px;
@@ -1322,6 +1315,38 @@
   font-size: 10.624px;
   font-weight: 300;
   line-height: 10.624px;
+}
+.OurClients_Slide_Button {
+  align-self: end;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+}
+.OurClients_Slide_ButtonNext {
+  align-self: end;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+  justify-content: end;
+  padding-bottom: 40px;
+  padding-inline: 50px;
+}
+.OurClients_Slide_Button_Text {
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
 }
 .ArrowButton {
   display: flex;
@@ -1348,17 +1373,6 @@
 .ArrowButton_Arrow {
   font-size: 1em;
   font-weight: bolder;
-}
-.OurClients_Slide_Button_Text {
-  cursor: pointer;
-  font-size: 25.6px;
-  font-weight: 600;
-  line-height: 34.432px;
-  text-align: center;
-}
-.OurClients_Slide_Last {
-  padding-inline: 180px;
-  padding-block: 110px;
 }
 .YellowMarkSlide {
   background-image: linear-gradient(90deg, #ffd042, #ffdc74);
