--- a/src/components/organisms/tresci-sprzedazowe/tresci.css
+++ b/src/components/organisms/tresci-sprzedazowe/tresci.css
@@ -495,3 +495,37 @@ section.black-sec-form {
     background: black;
     padding: 100px 0;
 }
+
+/* ===================================faq==================================== */
+
+.accordion-item {
+    border: 1px solid #ddd;
+    margin-bottom: 5px;
+  }
+  
+  .accordion-title {
+    padding: 15px 20px;
+    cursor: pointer;
+    background-color: #f5f5f5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 24px;
+    font-weight: 600;
+}
+  
+  .accordion-title.active {
+    background-color: #f5f5f5;
+  }
+  
+  .accordion-content {
+    padding: 20px;
+    font-size: 18px;
+    line-height: 30px;
+    background: #f5f5f5;
+    border-top: 3px solid lightgray;
+}
+  .faqContainer {
+    max-width: 900px;
+    margin: 0 auto;
+}
