--- a/src/app/cennik/cennik.css
+++ b/src/app/cennik/cennik.css
@@ -38,12 +38,17 @@
 }
 
 .cennikBtn {
-  background-color: #d21e00;
   padding: 8px 16px;
-  border-radius: 100px;
+  background: #d21e00;
+  font-size: 18px;
+  border-radius: 50px;
   color: white;
-  font-size: 20px;
-  font-weight: 600;
-  border-color: rgb(201, 201, 201);
-  outline-color: rgb(201, 201, 201);
+  border: none;
+  font-weight: 500;
+  box-shadow: 0 6px 0px #981a04;
+}
+
+.cennikBtn:hover {
+  box-shadow: none;
+  transition: box-shadow 0.3s ease-out;
 }
