feat(strategia-marketingowa): add carousel and modify range ui

--- a/src/app/kalkulator/calculator.css
+++ b/src/app/kalkulator/calculator.css
@@ -82,19 +82,18 @@
 
 /* custom range styles */
 input[type="range"] {
-  overflow: hidden;
   width: 100%;
   -webkit-appearance: none;
   background-color: #b7e7ec;
 }
 
 input[type="range"]::-webkit-slider-thumb {
-  width: 10px;
   -webkit-appearance: none;
-  height: 10px;
-  cursor: pointer;
+  height: 14px;
+  width: 14px;
+  border-radius: 999999px;
   background: #0091a2;
-  box-shadow: -100px 0 0 100px #3f4b5c;
+  cursor: pointer;
 }
 
 /** FF*/
