--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -110,7 +110,7 @@
     font-weight: 300 !important;
 }
 
-/* ================================================== hard Result================================= */
+/* ================================================== order================================= */
 .order{
     border-radius: 30px;
     display: grid;
@@ -183,4 +183,7 @@
 .ratingNumber p span{
   font-weight: 600;
 }
-
+.pinkBG{
+    padding: 50px 0;
+    background-image: linear-gradient(173deg,#e3e3e3 53%,#fbb1b6);
+}
