--- a/src/components/organisms/opinie/opinie.module.css
+++ b/src/components/organisms/opinie/opinie.module.css
@@ -19,7 +19,7 @@
 /* ===================job=============== */
 .brilliant {
     background: white;
-    padding: 100px 0;
+    padding: 100px 0 50px;
 }
 
 .job {
@@ -209,13 +209,13 @@
     padding: 0px 0 1px;
 }
 
-.brandsContainer h2 {
+.brands h2 {
     font-size: 60px;
     font-weight: 800;
     margin: 0 0 100px;
 }
 
-.brandsContainer h2 span {
+.brands h2 span {
     /* font-weight: 600; */
     background-image: linear-gradient(90deg, #ffd042, #ffdc74);
     border-radius: 20px;
@@ -371,6 +371,11 @@
 
 .googleHover:hover .hoverMenu {
     display: block;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 10px 10px #00000024;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 
@@ -532,7 +537,7 @@
 }
 /* ==========================expert=============================== */
 .expert{
-    background: white;
+    background-image: linear-gradient(180deg,#fcfcfc 53%,#e3e3e3);
     padding: 100px 0;
 }
 .expertContent h2{
