--- a/src/app/kalkulator/calculator.css
+++ b/src/app/kalkulator/calculator.css
@@ -73,18 +73,31 @@
   outline: none;
 }
 
+input[type="range"]::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc((var(--value) - 10) / (9999 - 10) * 100%);
+  height: 8px;
+  background-color: #003366;
+  border-radius: 5px;
+}
+
 .custom-range {
   height: 8px;
   outline: none;
   border: none;
   border-radius: 5px;
+  position: relative;
 }
 
-/* custom range styles */
 input[type="range"] {
   width: 100%;
   -webkit-appearance: none;
   background-color: #b7e7ec;
+  z-index: 1;
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -94,6 +107,7 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 999999px;
   background: #0091a2;
   cursor: pointer;
+  position: relative;
 }
 
 /** FF*/
