--- a/src/components/organisms/main/video/video.module.css
+++ b/src/components/organisms/main/video/video.module.css
@@ -9,4 +9,42 @@
     border-radius: 50px;
     width: 80% !important;
     z-index: 0;
+
 }
+.youtubeIcon{
+    background: rgba(156,0,0,.95);
+    width: 130px;
+    height: 75px;
+    border-radius: 18px;
+    position: absolute;
+    left: 48%;
+    top: 150px;
+}
+.youtubeIcon svg{
+    width: 40px;
+    margin: 18px auto;
+    display: block;
+}
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .popup-content {
+    background: white;
+    padding: 20px;
+    max-width: 800px;
+    max-height: 80%;
+    overflow: auto;
+  }
+  .popupVideo video{
+    border-radius: 30px; 
+  }
