cennik cards, facts card fix and modal initial UI

--- a/src/app/cennik/cennik.css
+++ b/src/app/cennik/cennik.css
@@ -52,3 +52,26 @@
   box-shadow: none;
   transition: box-shadow 0.3s ease-out;
 }
+
+/* additional input */
+.additional-input-container {
+  display: flex;
+  margin: 20px;
+  padding: 20px;
+}
+
+.additional-input-container h2 {
+  font-size: 20px;
+  font-weight: 700;
+  margin-right: 18px;
+}
+
+.additional-input-container input {
+  padding: 8px 16px;
+  outline-color: rgb(210, 30, 0);
+  border: none;
+  border-color: hsl(0, 0%, 80%);
+  font-size: 18px;
+  font-weight: 300;
+  border-radius: 30px;
+}
