--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,13 @@
 body {
   background: #e3e3e3;
 }
-body{
-    background: #e3e3e3;
+body {
+  background: #e3e3e3;
+}
+
+.loader_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
