--- a/src/components/organisms/zamow/zamow-hero/zamow-hero.css
+++ b/src/components/organisms/zamow/zamow-hero/zamow-hero.css
@@ -1,13 +1,16 @@
 .zamow-hero h1 {
   font-size: 70px;
-  font-weight: 400;
+  font-weight: 600;
+  line-height: 60px;
+  margin: 0 0 40px;
 }
 
 .zamow-hero p {
   line-height: 1.4;
   font-weight: 300;
   color: rgb(45 45 45);
-  font-size: 22px;
+  font-size: 28px;
+  margin: 0 0 40px;
 }
 
 .custom-color {
